2012/10/14: 1.[SDK工具-调整优化] 	a) SDK 性能提升：利用内存减少外存的开销 	b) 为Windows操作系统新增实验性的启动脚本：NewStartServer.bat，尝试减少SDK服务器等待时间