@@ -29,9 +29,6 @@ set JAVA_OPTS=%JAVA_OPTS% -XX:+UseCompressedStrings
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseParallelGC
 set JAVA_OPTS=%JAVA_OPTS% -XX:ParallelGCThreads=2
 
-set JAVA_OPTS=%JAVA_OPTS% -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintTenuringDistribution -Xloggc:%DCSDK_HOME%\logs\gc.log
-set JAVA_OPTS=%JAVA_OPTS% -XX:ErrorFile=%DCSDK_HOME%\logs\jvm_error.log
-
 set JAVA_OPTS=%JAVA_OPTS% -javaagent:%DCSDK_HOME%/lib/taobao/sdk-agent-2.0.0-SNAPSHOT.jar
 set JAVA_OPTS=%JAVA_OPTS% -DDCSDK_HOME=%DCSDK_HOME%
 set JAVA_OPTS=%JAVA_OPTS% -Dfile.encoding=GBK
